--- a/paper/relatedwork.tex
+++ b/paper/relatedwork.tex
@@ -5,7 +5,7 @@
 This section discusses some related work with \NM{}. 
 
 \paragraph{General Purpose Allocators:}
- There exists a large number of allocators~\cite{dlmalloc,Hoard,tcmalloc,jemalloc,Scalloc}, but they are not designed for NUMA architecture. Based on the management of small objects, allocators can be further classified into multiple types, such as sequential, BiBOP, and region-based allocators~\cite{Gay:1998:MME:277650.277748,  DieHarder}. Region-based allocators are suitable for special situations where all allocated objects within the same region can be deallocated at once~\cite{Gay:1998:MME:277650.277748}. For sequential allocators, subsequent memory allocations are satisfied in the continuous memory area, such as the Linux allocator originated from dlmalloc~\cite{dlmalloc} and Windows allocator~\cite{DieHarder}. That is, objects with different sizes can be placed continuously. For BiBOP-style allocators, one or multiple continuous pages are treated as a ``bag'', holding objects with the same size class. Many performance-oriented allocators, such as TCMalloc~\cite{tcmalloc}, \texttt{jemalloc}~\cite{jemalloc}, Hoard~\cite{Hoard}, Scalloc~\cite{Scalloc}, and most secure allocators, such as OpenBSD~\cite{OpenBSD} and DieHarder~\cite{DieHarder}, belong to this type.  \NM{} also belongs to BiBOP-style allocators, and proposes multiple special designs for the NUMA architecture. 
+ There exists a large number of allocators~\cite{dlmalloc,Hoard,tcmalloc,jemalloc,Scalloc}, but they are not designed for NUMA architecture. Based on the management of small objects, allocators can be further classified into multiple types, such as sequential, BiBOP, and region-based allocators~\cite{Gay:1998:MME:277650.277748,  DieHarder}. Region-based allocators are suitable for special situations where all allocated objects within the same region can be deallocated at once~\cite{Gay:1998:MME:277650.277748}. For sequential allocators, subsequent memory allocations are satisfied in the continuous memory area, such as the Linux allocator originated from dlmalloc~\cite{dlmalloc} and Windows allocator~\cite{DieHarder}. That is, objects with different sizes can be placed continuously. For BiBOP-style allocators, one or multiple continuous pages are treated as a ``bag'', holding objects with the same size class. Many performance-oriented allocators, such as TCMalloc~\cite{tcmalloc}, \texttt{jemalloc}~\cite{jemalloc}, Hoard~\cite{Hoard}, Scalloc~\cite{Scalloc}, and most secure allocators belong to this type, such as DieHarder~\cite{DieHarder}.  \NM{} also belongs to BiBOP-style allocators, and proposes multiple special designs for the NUMA architecture. 
 
 \paragraph{NUMA-aware Allocators:} TcMalloc-NUMA adds additional node-based freelists and free spans to store freed objects and pages belonging to the same node~\cite{tcmallocnew}, which is similar to \NM{}. It also invokes the \texttt{mbind} system call to bind physical memory allocations to the node that the current thread is running on, which is similar to JArena~\cite{yang2019jarena}. But JArena requires the co-design of applications, runtime system and the underlying OS, which is not transparent to users~\cite{yang2019jarena}. Also, both of them does not support huge pages and interleaved heap, invokes too many \texttt{mbind} system calls, and does not handle the metadata's locality. nMART proposes a NUMA-aware memory allocation for soft real-time system~\cite{kim2013node}. It proposes node-oriented allocation policy to minimize the access latency, and ensures temporal and spatial guarantee for real-time systems. nMART requires the change of the underlying OS, which is different from \NM{}. nMART also has a different target as \NM{} that tries to meet the time requirement of real-time systems, and \NM{} focuses more on the performance.
 
