Updates from Overleaf

--- a/paper-ooplsa20/main.tex
+++ b/paper-ooplsa20/main.tex
@@ -46,7 +46,7 @@
 \newcommand{\JE}{\texttt{jemalloc}}
 \newcommand{\NA}{\texttt{NUMAlloc}}
 \newcommand{\NM}{\texttt{NUMAlloc}}
-
+\newcommand{\TN}{TcMalloc-NUMA}
 
 \newcommand{\pthread}{\texttt{pthread}}
 \newcommand{\pthreads}{\texttt{pthreads}}
@@ -60,12 +60,12 @@
     \normalfont B\kern-0.5em{\scshape i\kern-0.25em b}\kern-0.8em\TeX}}}
 
 \citestyle{acmauthoryear}
-
+\def\bibfont{\normalfont}
 % May send this work to Emery and Qiang zheng for their feedbacks. 
 
 \begin{document}
 
-\title{NUMAlloc: Adaptive NUMA Memory Allocator}
+\title{NUMAlloc: Fine-grained NUMA Memory Allocator}
 \author{Anonymous}
 
 \input{abstract}
