--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,9 +1,9 @@
 \begin{abstract}
 
 
-The NUMA architecture was proposed to accommodate the hardware trend with the increasing number of CPU cores. However, existing memory allocators have multiple issues for support the NUMA architecture: most of them were not designed for the NUMA architecture; NUMA-aware allocators still miss some performance opportunities. 
+The NUMA architecture was proposed to accommodate the hardware trend of the increasing number of CPU cores. However, none of existing memory allocators can accommodate the heterogeneity of both modern hardware and applications, and therefore they cannot perform well on the NUMA architecture. 
 
-This paper proposes a novel memory allocator--\NM{}---that is designed for the NUMA architecture and can adapt to a specific machine automatically. Different from existing allocators, \NM{} integrates the task assignment into the allocator, where each thread is bound to a NUMA node in an interleaved way. Based on the location of a task, \NM{} designs a node-aware memory allocation. \NM{} also utilizes huge page support to improve the performance, and designs an interleaved heap to accommodate shared objects. Based on its extensive evaluation, \NM{} has the best performance among all evaluated allocators. It is significantly faster than the second best one, around 11\% on average on an 8-node machine. For the best case, \NM{} achieves up to $5.8\times$ performance speedup comparing to the default Linux allocator, and $4.7\times$ faster than the second best one (TcMalloc). \NM{} is also scalable to 128 threads, and is ready for the deployment. 
+This paper proposes a novel memory allocator--\NM{}, with fine-grained memory management that is designed for the NUMA architecture. \NM{} first proposes an origin-based memory management to ensure the locality of memory allocations. It further introduces node-balanced thread binding and an interleaved heap to reduce load imbalance among different nodes. \NM{} also employs the benefits of huge pages with an explicit huge page support. According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. It is significantly faster than the second-best one, around 11\% on average on an 8-node machine. For the best case, \NM{} achieves up to $5.8\times$ performance speedup comparing to the default Linux allocator, and $4.7\times$ faster than the second-best one (TcMalloc). \NM{} is also scalable to 128 threads, and is ready for the deployment. 
 
 	
 \end{abstract}
